# rust_roguelike

./: Cargo.toml  README.md
.cargo/: config.toml
src/: components.rs  main.rs  map.rs  player.rs  rect.rs
wasm/: roguelike_bg.wasm
