[package]
name = "roguelike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk={git="https://github.com/amethyst/bracket-lib.git"}
specs={git="https://github.com/amethyst/specs.git"}
specs-derive={git="https://github.com/amethyst/specs.git", package="specs-derive"}

[profile.release]
lto = true
strip = true
panic = 'abort'